--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">myGurukul</string>
-</resources>
+<string name="open">Open</string>
+<string name="close">Close</string>
+    </resources>
